# infernoVX

./: .gitignore  CMakeLists.txt  README.md
include/: logger.h
resources/: deferred.frag  deferred.vert  drawquad.frag  drawquad.vert  simpleraster.frag  simpleraster.vert  tracer.frag
src/: camera.cpp  camera.hpp  display.cpp  display.hpp  main.cpp  pipeline.cpp  pipeline.hpp  rasterbuffer.cpp  rasterbuffer.hpp  renderpass.cpp  renderpass.hpp  scene.cpp  scene.hpp  settings.hpp  shader.cpp  shader.hpp  utilities.hpp  voxel.cpp  voxel.hpp
